--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@ header {
   text-align: center;
   background-color: #96858f;
   padding-bottom: 3em;
-  
+  font-family: 'Sansita', sans-serif;
 }
 
 h1 {
@@ -26,7 +26,9 @@ h1 {
 
 a {
   color: white;
+  text-decoration: none;
 }
+
 
 body {
   background-color: #808080;
@@ -44,6 +46,12 @@ aside {
   font-weight: bold;
 }
 
+footer {
+  float: right;
+  padding-bottom: .9em;
+  padding-right: .9em;
+  
+}
 
 
 /*Color scheme 
