--- a/styles/main.css
+++ b/styles/main.css
@@ -107,3 +107,23 @@ background:
   padding-right: 20px;
   text-align: center;
 }
+
+.badge {
+  font size: .5rem;
+}
+
+#circle {
+  width: 20px;
+  height: 20px;
+  background: white;
+  position: fixed;
+  right: 250px;
+  top: 30px;
+  z-index: 9999;
+  border-radius: 10px;
+  
+}
+
+#number {
+  color:black;
+}
